# Pepoapple

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  docker-compose.node.yml  docker-compose.yml  install-node.sh  install-subpage.sh  install.sh  pyproject.toml
agent/: Dockerfile  go.mod
agent/cmd/agent/: main.go
agent/internal/api/: client.go
agent/internal/config/: config.go
agent/internal/runtime/: manager.go
app/: main.py
app/api/v1/: router.py
app/core/: config.py  rate_limit.py
app/db/: session.py
app/graphql/: schema.py
app/models/: __init__.py  entities.py
app/schemas/: auth.py  backup.py  billing.py  devices.py  migration.py  nodes.py  protocols.py  reseller.py  squads.py  users.py  webhooks.py
app/services/: audit.py  auth.py  backup.py  billing.py  devices.py  migration.py  rbac.py  subscription.py  traffic.py  webhooks.py
app/tests/: conftest.py  test_acceptance_mvp.py  test_full_features.py
deploy/: pepoapple-agent.service
frontend/: Dockerfile  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/audit/: page.tsx
frontend/app/client-billing/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/infra-billing/: page.tsx
frontend/app/migration/: page.tsx
frontend/app/nodes/: page.tsx
frontend/app/users/: page.tsx
frontend/components/: admin-shell.tsx  section-card.tsx  ui.tsx
frontend/lib/: api.ts
scripts/: install-nodes-ssh.sh  seed_demo.py
sql/: 001_init.sql  002_full_features.sql
subscription-page/: .env.example  Dockerfile  app.py
(+18 files in other folders)
